--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm-game-of-life"
+name = "roadhouse-wasm"
 version = "0.1.0"
 authors = ["Parker Given <pgiven14@gmail.com>"]
 edition = "2018"
